--- a/html_CSS/style.css
+++ b/html_CSS/style.css
@@ -1,6 +1,8 @@
 #article{
   color: blue;
   background-color: green;
-  display: block;
+  display: inline-block;
+  width: 350px;
   border: 2px black dotted;
 }
+
