--- a/html_CSS/style.css
+++ b/html_CSS/style.css
@@ -1,5 +1,5 @@
 
-#article{
+#images{
   color: blue;
   background-color: green;
   font-size: 100px;
@@ -8,7 +8,8 @@
   border: 2px black dotted;
 }
 
-#article:hover {
+#images:hover {
 width: 350px;
 float: left;
 }
+
