--- a/html_CSS/style.css
+++ b/html_CSS/style.css
@@ -1,16 +1,31 @@
 
-#text {
-  color: blue;
-  background-color: green;
-  font-size: 100px;
+header {
+  color: white;
+  font-size: 50px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: black;
+  margin: 0;
+  padding: 0;
 }
 
-#border {
-  border: 5px black dotted;
+
+article {
+  border: 5px white dotted;
+  background-color: black;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
 }
+
 footer {
-font-size: 100px;
-color: green;
-background-color: blue;
+color: white;
+font-size: 50px;
+font-family: Arial, Helvetica, sans-serif;
+background-color: black;
+margin: 0;
+padding: 0;
 }
 
