--- a/html_CSS/style.css
+++ b/html_CSS/style.css
@@ -4,19 +4,21 @@ header {
   font-size: 50px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: black;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+
 }
 
 
 article {
   border: 5px white dotted;
   background-color: black;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   display: inline-block;
   width: 100%;
-  height: 100%;
+  height: 1000px;
   overflow: scroll;
 }
 
@@ -25,7 +27,8 @@ color: white;
 font-size: 50px;
 font-family: Arial, Helvetica, sans-serif;
 background-color: black;
-margin: 0;
-padding: 0;
+margin: 0px;
+padding: 0px;
+border: 0px
 }
 
