--- a/html_CSS/style.css
+++ b/html_CSS/style.css
@@ -4,6 +4,8 @@ header {
   font-size: 50px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: black;
+  position: relative;
+  top: 0px;
   margin: 0px;
   padding: 0px;
   border: 0px;
@@ -18,8 +20,7 @@ article {
   padding: 0px;
   display: inline-block;
   width: 100%;
-  height: 1000px;
-  overflow: scroll;
+  height: 100%;
 }
 
 footer {
