--- a/html_CSS/style.css
+++ b/html_CSS/style.css
@@ -12,15 +12,34 @@ header {
 
 }
 
+nav {
+  background-color: black;
+  color: white;
+  display: block;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  transition: background-color 600ms ease-in 300ms, 
+  color 600ms ease-in 300ms;
+}
+
+nav:hover {
+  background-color: white;
+  color: black;
+}
 
 article {
   border: 5px white dotted;
   background-color: black;
   margin: 0px;
   padding: 0px;
-  display: inline-block;
+  display: block;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 footer {
